packages/window_decoration/lib/src/macos.g.dart

// AUTO GENERATED FILE, DO NOT EDIT.
//
// Generated by `package:ffigen`.
// ignore_for_file: type=lint, unused_import
@ffi.DefaultAsset('package:window_decoration/macos')
library;

import 'dart:ffi' as ffi;

@ffi.Native<ffi.Void Function(ffi.Pointer<ffi.Void>)>()
external void cw_nswindow_remove_titlebar(
  ffi.Pointer<ffi.Void> ns_window,
);

@ffi.Native<
  ffi.Void Function(ffi.Pointer<ffi.Void>, ffi.Pointer<cw_rect_t>, ffi.Size)
>()
external void cw_nswindow_update_draggable_areas(
  ffi.Pointer<ffi.Void> ns_window,
  ffi.Pointer<cw_rect_t> exclude,
  int exclude_count,
);

@ffi.Native<ffi.Void Function(ffi.Pointer<ffi.Void>)>()
external void cw_nswindow_disable_draggable_areas(
  ffi.Pointer<ffi.Void> ns_window,
);

@ffi.Native<
  ffi.Void Function(ffi.Pointer<ffi.Void>, ffi.Bool, ffi.Double, ffi.Double)
>()
external void cw_nswindow_update_traffic_light(
  ffi.Pointer<ffi.Void> ns_window,
  bool enabled,
  double x,
  double y,
);

@ffi.Native<ffi.Void Function(ffi.Pointer<ffi.Void>)>()
external void cw_nswindow_request_close(
  ffi.Pointer<ffi.Void> ns_window,
);

@ffi.Native<
  ffi.Void Function(ffi.Pointer<ffi.Void>, ffi.Int, ffi.Int, ffi.Int)
>()
external void cw_nswindow_apply_vibrancy(
  ffi.Pointer<ffi.Void> ns_window,
  int material,
  int blending_mode,
  int state,
);

@ffi.Native<
  ffi.Void Function(
    ffi.Pointer<ffi.Void>,
    ffi.Pointer<ffi.Double>,
    ffi.Pointer<ffi.Double>,
  )
>()
external void cw_nswindow_get_frame_origin(
  ffi.Pointer<ffi.Void> ns_window,
  ffi.Pointer<ffi.Double> out_x,
  ffi.Pointer<ffi.Double> out_y,
);

@ffi.Native<
  ffi.Void Function(ffi.Pointer<ffi.Void>, ffi.Double, ffi.Double)
>()
external void cw_nswindow_set_frame_origin(
  ffi.Pointer<ffi.Void> ns_window,
  double x,
  double y,
);

@ffi.Native<ffi.Void Function(ffi.Pointer<ffi.Void>, cw_delegate_config_t)>()
external void cw_nswindow_init_delegate(
  ffi.Pointer<ffi.Void> ns_window,
  cw_delegate_config_t config,
);

final class cw_rect_t extends ffi.Struct {
  @ffi.Double()
  external double x;

  @ffi.Double()
  external double y;

  @ffi.Double()
  external double w;

  @ffi.Double()
  external double h;
}

final class cw_size_t extends ffi.Struct {
  @ffi.Double()
  external double w;

  @ffi.Double()
  external double h;
}

final class cw_delegate_config_t extends ffi.Struct {
  external ffi.Pointer<
    ffi.NativeFunction<cw_size_t Function(cw_size_t new_size)>
  >
  on_window_will_resize;

  external ffi.Pointer<ffi.NativeFunction<ffi.Void Function()>>
  on_window_will_close;

  external ffi.Pointer<ffi.NativeFunction<ffi.Void Function()>>
  on_window_will_enter_fullscreen;

  external ffi.Pointer<ffi.NativeFunction<ffi.Void Function()>>
  on_window_did_enter_fullscreen;

  external ffi.Pointer<ffi.NativeFunction<ffi.Void Function()>>
  on_window_will_exit_fullscreen;

  external ffi.Pointer<ffi.NativeFunction<ffi.Void Function()>>
  on_window_did_exit_fullscreen;

  external ffi.Pointer<
    ffi.NativeFunction<cw_rect_t Function(cw_rect_t default_frame)>
  >
  on_window_will_use_standard_frame;
}
